2020-12-18  Mohammad-Reza Nabipoor  <m.nabipoor@yahoo.com>

	* poke/poke.c (parse_args_2): Go to `exit_failure` when
	`pk_compile_file` fails.

2020-12-17  Jose E. Marchesi  <jemarch@gnu.org>

	* testsuite/poke.pickles/color-test.pk: Fix typo.

2020-12-17  Mohammad-Reza Nabipoor  <m.nabipoor@yahoo.com>

	* testsuite/lib/poke-pk.exp: New file.
	* testsuite/poke.pickles/pickles.exp: Likewise.
	* testsuite/poke.pickles/argp-test.pk: New unit test.
	* testsuite/poke.pickles/color-test.pk: Likewise.
	* testsuite/poke.pickles/id3v1-test.pk: Likewise.
	* testsuite/poke.pickles/rgb24-test.pk: Likewise.
	* testsuite/poke.std/std-test.pk: Likewise.
	* testsuite/poke.std/std.exp: Re-write to use `poke-pk.exp`.
	* testsuite/poke.argp/: Remove test directory.
	* testsuite/poke.color/: Likewise.
	* testsuite/poke.id3v1/: Likewise.
	* testsuite/poke.rgb24/: Likewise.
	* testsuite/Makefile.am (EXTRA_DIST): Add new tests, remove old ones.

2020-12-17  Mohammad-Reza Nabipoor  <m.nabipoor@yahoo.com>

	* pickles/pktest.pk: New file.
	* pickles/Makefile.am (dist_pickles_DATA): Add `pktest.pk`.
	* testsuite/poke.pktest/pktest.exp: New file.
	* testsuite/poke.pktest/pktest-1.pk: Likewise.
	* testsuite/poke.pktest/pktest-2.pk: Likewise.
	* testsuite/poke.pktest/pktest-3.pk: Likewise.
	* testsuite/poke.pktest/pktest-4.pk: Likewise.
	* testsuite/poke.pktest/pktest-5.pk: Likewise.
	* testsuite/poke.pktest/pktest-6.pk: Likewise.
	* testsuite/poke.pktest/pktest-7.pk: Likewise.
	* testsuite/poke.pktest/pktest-8.pk: Likewise.
	* testsuite/poke.pktest/pktest-9.pk: Likewise.
	* testsuite/poke.pktest/pktest-10.pk: Likewise.
	* testsuite/poke.pktest/pktest-11.pk: Likewise.
	* testsuite/poke.pktest/pktest-12.pk: Likewise.
	* testsuite/Makefile.am (EXTRA_DIST): Add new tests.
	* etc/hacking.org (Testing Pickles): Update.
	* HACKING: Regenerate.

2020-12-17  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/libpoke.h (struct pk_term_if): Change the prototype of