@@ -1,0 +1,8 @@
+/* { dg-do run } */
+
+var a = [10];
+var i = 0UL;
+
+/* { dg-command {a[i++] = 20 } } */
+/* { dg-command {a[0]} } */
+/* { dg-output "20" } */
