@@ -1,3 +1,12 @@
+2020-12-18  Jose E. Marchesi  <jemarch@gnu.org>
+
+	* libpoke/pkl-gen.c (pkl_gen_pr_indexer): Make sure to traverse
+	entity and index in normal context, as assignments can be nested
+	via post/pre incr/decr expressions.
+	* testsuite/poke.pkl/ass-10.pk: New test.
+	* testsuite/poke.pkl/ass-11.pk: Likewise.
+	* testsuite/Makefile.am (EXTRA_DIST): Update.
+
 2020-12-18  Mohammad-Reza Nabipoor  <m.nabipoor@yahoo.com>
 
 	* poke/poke.c (parse_args_2): Go to `exit_failure` when
